fix: update alignment styles

--- a/assets/scss/components/main/_gutenberg.scss
+++ b/assets/scss/components/main/_gutenberg.scss
@@ -46,10 +46,14 @@
 }
 
 .nv-sidebar-left,
-.nv-sidebar-right {
+.nv-sidebar-right,
+.wp-block-column,
+.is-layout-constrained:not(.alignfull):not(.alignwide),
+[class*="wp-block-"]:has(> [class*="wp-block-"]):not(.alignfull):not(.alignwide) {
 
 	.alignfull,
 	.alignwide {
+		width: 100%;
 		max-width: 100%;
 		margin-left: auto;
 		margin-right: auto;
